// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.vue block 1`] = `
<button
  class="x-button   x-button__ripple x-button__block"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue block 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue create 1`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue disabled 1`] = `
<button
  class="x-button   x-button__ripple x-button__disabled"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue disabled 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue nativeType 1`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue nativeType 2`] = `
<button
  class="x-button   x-button__ripple"
  type="submit"
>
  Button
</button>
`;

exports[`Button.vue nativeType 3`] = `
<button
  class="x-button   x-button__ripple"
  type="reset"
>
  Button
</button>
`;

exports[`Button.vue ripple 1`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue ripple 2`] = `
<button
  class="x-button"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue round 1`] = `
<button
  class="x-button   x-button__ripple x-button__round"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue round 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue small 1`] = `
<button
  class="x-button   x-button__ripple x-button__small"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue small 2`] = `
<button
  class="x-button   x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue stylus 1`] = `
<button
  class="x-button x-button__text  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue stylus 2`] = `
<button
  class="x-button x-button__icon  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue stylus 3`] = `
<button
  class="x-button x-button__outlined  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue stylus 4`] = `
<button
  class="x-button x-button__contained  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue stylus 5`] = `
<button
  class="x-button x-button__toggle  x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue type 1`] = `
<button
  class="x-button  x-button__flat x-button__ripple"
  type="button"
>
  Button
</button>
`;

exports[`Button.vue type 2`] = `
<button
  class="x-button  x-button__fab x-button__ripple"
  type="button"
>
  Button
</button>
`;
